@@ -201,8 +201,7 @@ extern void add_hook (repv sym, repv fun);
 extern Lisp_Window *window_list;
 extern int window_type;
 extern Lisp_Window *focus_window;
-extern repv Qadd_window_hook, Qplace_window_hook, Qwindow_state_change_hook;
-extern repv Qiconified;
+extern repv Qadd_window_hook, Qplace_window_hook;
 extern bool mapped_not_override_p (Window id);
 extern void focus_on_window (Lisp_Window *w);
 extern void fix_window_size (Lisp_Window *w);
@@ -240,7 +239,6 @@ extern repv Fwindow_id (repv win);
 extern repv Fwindow_group_id (repv win);
 extern repv Fwindow_size_hints (repv win);
 extern repv Fcall_window_hook (repv hook, repv win, repv args, repv type);
-extern repv Fset_client_state (repv win);
 extern void manage_windows (void);
 extern void windows_init (void);
 extern void windows_kill (void);
