@@ -1,5 +1,7 @@
 1999-08-31  John Harper  <john@dcs.warwick.ac.uk>
 
+	* windows.c (Fset_client_state): deleted
+
 	* functions.c (Fget_x_property, Fset_x_property): use CARD16
 	and CARD32 types to access 16- and 32-bit data respectively
 
