@@ -1,3 +1,8 @@
+1999-08-31  John Harper  <john@dcs.warwick.ac.uk>
+
+	* workspace.jl (ws-set-client-state): new function, in
+	window-state-change-hook and add-window-hook
+
 1999-08-30  John Harper  <john@dcs.warwick.ac.uk>
 
 	* sawmill.jl: load custom-set values before .sawmillrc (but
